--- a/Strategix-desktop/.classpath
+++ b/Strategix-desktop/.classpath
@@ -7,6 +7,6 @@
 	<classpathentry kind="lib" path="libs/gdx-backend-lwjgl.jar" sourcepath="libs/gdx-backend-lwjgl-sources.jar"/>
 	<classpathentry kind="lib" path="libs/gdx-backend-lwjgl-natives.jar"/>
 	<classpathentry kind="lib" path="libs/gdx-natives.jar"/>
-	<classpathentry kind="lib" path="D:/libgdx/eclipse/time/joda-time-2.3/joda-time-2.3.jar"/>
+	<classpathentry kind="lib" path="/Strategix/libs/joda-time-2.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
