--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore Java binary directories
+*/bin/*
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -26,7 +29,7 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
+Icon
 
 # Thumbnails
 ._*
