--- a/Strategix-android/.classpath
+++ b/Strategix-android/.classpath
@@ -9,6 +9,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/gdx-backend-android.jar" sourcepath="libs/gdx-backend-android-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Strategix/libs/tween-engine-api.jar" sourcepath="/Strategix/libs/tween-engine-api-sources.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="lib" path="D:/libgdx/eclipse/time/joda-time-2.3/joda-time-2.3.jar"/>
+	<classpathentry kind="lib" path="/Strategix/libs/joda-time-2.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
