--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,61 @@
+## Java
+
+*.class
+*.war
+*.ear
+hs_err_pid*
+
+## Gradle
+
+.gradle
+build/
+
+## GWT
+war/
+html/war/gwt_bree/
+html/gwt-unitCache/
+.apt_generated/
+html/war/WEB-INF/deploy/
+html/war/WEB-INF/classes/
+.gwt/
+gwt-unitCache/
+www-test/
+.gwt-tmp/
+
+## Android Studio and Intellij and Android in general
+android/libs/armeabi/
+android/libs/armeabi-v7a/
+android/libs/x86/
+android/gen/
+.idea/
+*.ipr
+*.iws
+*.iml
+out/
+com_crashlytics_export_strings.xml
+
+## Eclipse
+.classpath
+.project
+.metadata
+*/bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.externalToolBuilders/
+*.launch
+
+#==========================
+# OS Files
+#==========================
+
+# Windows
+#==========================
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -13,10 +71,6 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
-
-# =========================
-# Operating System Files
-# =========================
 
 # OSX
 # =========================
@@ -34,3 +88,4 @@ Icon
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+/build/
